# src/controllers/bookCollection.controller.ts
@@ -7,6 +7,7 @@ import {
   Path,
   Post,
   Route,
+  Security,
   Tags,
 } from "tsoa";
 import {
@@ -15,46 +16,53 @@ import {
   BookCollectionOutputDTO,
 } from "../dto/bookCollection.dto";
 import { bookCollectionService } from "../services/bookCollection.service";
+
 @Route("book-collections")
 @Tags("BookCollections")
 export class BookCollectionController extends Controller {
   @Get("/")
+  @Security("jwt", ["bookCollection:read"])
   public async getAllBooksCollection(): Promise<BookCollectionOutputDTO[]> {
     return bookCollectionService.getAllBookCollections();
   }
 
   @Get("{id}")
+  @Security("jwt", ["bookCollection:read"])
   public async getBookCollection(
-    @Path("id") id: number,
+    @Path("id") id: number
   ): Promise<BookCollectionOutputDTO> {
     return bookCollectionService.getBookCollectionById(id);
   }
 
   @Post("/")
+  @Security("jwt", ["bookCollection:write"])
   public async postBookCollection(
-    @Body() requestBody: BookCollectionInputDTO,
+    @Body() requestBody: BookCollectionInputDTO
   ): Promise<BookCollectionOutputDTO> {
+    // Seuls l'admin et le gérant peuvent créer de nouveaux exemplaires
     return bookCollectionService.createBookCollection(
       requestBody.book_id,
       requestBody.available,
-      requestBody.state,
+      requestBody.state
     );
   }
 
   @Patch("{id}")
+  @Security("jwt", ["bookCollection:write"])
   public async patchBookCollection(
     @Path("id") id: number,
-    @Body() requestBody: BookCollectionInputPatchDTO,
+    @Body() requestBody: BookCollectionInputPatchDTO
   ): Promise<BookCollectionOutputDTO> {
     return bookCollectionService.updateBookCollection(
       id,
       requestBody.book_id,
       requestBody.available,
-      requestBody.state,
+      requestBody.state
     );
   }
 
   @Delete("{id}")
+  @Security("jwt", ["bookCollection:delete"])
   public async deleteBookCollection(@Path("id") id: number): Promise<void> {
     await bookCollectionService.deleteBookCollection(id);
   }
